--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
         | <a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a>
         | <form style="display: inline;" action="{{url_for('search')}}" method="post" name="search">{{g.search_form.hidden_tag()}}{{g.search_form.search(size=20)}}<input type="submit" value="Search"></form>
         | <a href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+          <a href="{{ url_for('sign_up') }}">Sign_up</a>
         {% endif %}
     </div>
     <hr>
