修改完大部分网页 修复了分页bug

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     {% if title %}
@@ -13,26 +14,26 @@
   </head>
   <body>
     <div class="container">
-        <div class="navbar">
-            <div class="navbar-inner">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <a class="brand" href="/">Microblog</a>
-                  <ul class="nav">
-                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                     {% if g.user.is_authenticated() %}
-                     <li><a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a></li>
-        |            <li> <a href="{{ url_for('logout') }}">Logout</a></li>
-                     {% else %}
-                     <li><a href="{{ url_for('sign_up') }}">Sign_up</a></li>
-                     {% endif %}
-                  </ul>
-                <div class="nav-collapse collapse">
-                    {% if g.user.is_authenticated() %}
-        |           <form style="navbar-search pull-right" action="{{url_for('search')}}" method="post" name="search">{{g.search_form.hidden_tag()}}{{g.search_form.search(size=15,placeholder="Search",class="search-query")}}</form>
+      <div class="navbar">
+        <div class="navbar-inner">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Microblog</a>
+            <ul class="nav">
+              <li><a href="{{ url_for('index') }}">Home</a></li>
+              {% if g.user.is_authenticated() %}
+              <li><a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a></li>
+              <li> <a class="text-right" href="{{ url_for('logout') }}">Logout</a></li>
+              {% else %}
+              <li><a href="{{ url_for('sign_up') }}">Sign_up</a></li>
+              {% endif %}
+            </ul>
+          <div class="nav-collapse collapse">
+            {% if g.user.is_authenticated() %}
+            <form style="navbar-search pull-right" action="{{url_for('search')}}" method="post" name="search">{{g.search_form.hidden_tag()}}{{g.search_form.search(size=15,placeholder="Search",class="search-query")}}</form>
                     {% endif %}
                 </div>
             </div>
