--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -2,8 +2,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="well">
 <h1>Search results for "{{query}}":</h1>
 {% for post in results %}
     {% include 'post.html' %}
+</div>
 {% endfor %}
 {% endblock %}
