--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
+      <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <button class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
+          </button>
           <a class="brand" href="/">Microblog</a>
             <ul class="nav">
               <li><a href="{{ url_for('index') }}">Home</a></li>
@@ -33,11 +33,11 @@
             </ul>
           <div class="nav-collapse collapse">
             {% if g.user.is_authenticated() %}
-            <form style="navbar-search pull-right" action="{{url_for('search')}}" method="post" name="search">{{g.search_form.hidden_tag()}}{{g.search_form.search(size=15,placeholder="Search",class="search-query")}}</form>
-                    {% endif %}
-                </div>
-            </div>
+            <form class="form-search pull-right" style="navbar-search pull-right" action="{{url_for('search')}}" method="post" name="search">{{g.search_form.hidden_tag()}}{{g.search_form.search(size=15,placeholder="Search",class="search-query")}}</form>
+            {% endif %}
+          </div>
         </div>
+    </div>
         <div class="row">
             <div class="span12">
               {% block content %}{% endblock %}
