--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,7 +5,7 @@
 {% include 'flash.html' %}
 <div class="well well-large" style="height: 140px;">
     <div class="pull-right">
-        <img src="{{user.avatar(128)}}" class="img=polaroid">
+        <img src="{{user.avatar(128)}}" class="img-circle">
     </div>
     <h1>User: {{user.nickname}}</h1>
     {% if user.about_me %}<p>{{user.about_me}}</p>{% endif %}
